JCRVLT-392 Enable Travis for Java 9/11 on Linux and Windows
fix some failing tests on Windows
Move IT project to a higher level to not exceed  filename length
limitation on Windows
This closes #65

git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/commons/filevault/trunk@1870009 13f79535-47bb-0310-9956-ffa450edef68